notes/kubernetes/cks/manifests/network-policies/backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: backend
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: backend
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: frontend
      podSelector:
        matchLabels:
          app: frontend
