notes/kubernetes/cks/manifests/network-policies/deny-all.yaml
# Scenario 6: Isolate a Namespace but Allow DNS
# Problem:
# All pods in restricted-namespace should not communicate with other namespaces except for DNS resolution.
#
# Tasks:
# Block all ingress and egress except for traffic to CoreDNS (kube-dns service in kube-system).

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: restricted-namespace
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
